@@ -1,8 +1,7 @@
 
-#     Characters 118-119:
+#     Characters 137-138:
    fun C k -> k (fun x -> x);;
-       ^
-Error: Recursive local constraint when unifying
-         (((ex#0 -> ex#1) -> ex#1) -> (ex#2 -> ex#1) -> ex#1) t
-       with ((a -> o) -> o) t
+                          ^
+Error: This expression has type ex#0 but an expression was expected of type
+         ex#1 = (ex#2 -> ex#1) -> ex#1
 # 
